# wcn

./: .dockerignore  .env  .gitignore  .sops.yaml  Cargo.toml  Dockerfile  VERSION  deny.toml  env.sh  flake.nix
.github/: install-deps.sh
.github/workflows/: ci.yaml  claude-review.yaml  package-binary.yaml  package.yaml  release-package.yaml
crates/admin_cli/: Cargo.toml
crates/admin_cli/src/: deploy.rs  main.rs  maintenance.rs  migration.rs  operator.rs  ownership.rs  settings.rs  view.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  cluster.rs  connection.rs  encryption.rs  lib.rs  middleware.rs
crates/client/src/cluster/: monitoring.rs
crates/client/src/middleware/: encryption.rs  observer.rs  retries.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: keyspace.rs  lib.rs  maintenance.rs  migration.rs  node.rs  node_operator.rs  node_operators.rs  ownership.rs  settings.rs  task.rs  testing.rs  view.rs
crates/cluster/src/commands/: deploy.rs  migration.rs  mod.rs
crates/cluster/src/commands/deploy/: mod.rs
crates/cluster/src/commands/key/: mod.rs
crates/cluster/src/commands/migration/: mod.rs
crates/cluster/src/commands/operator/: mod.rs  update.rs
crates/cluster/src/commands/settings/: mod.rs  update.rs
crates/cluster/src/commands/show/: mod.rs
crates/cluster/src/smart_contract/: event.rs  evm.rs  mod.rs  testing.rs
crates/cluster/tests/: cli.rs  integration.rs
crates/cluster_api/: Cargo.toml
crates/cluster_api/src/: lib.rs
crates/cluster_api/src/rpc/: client.rs  mod.rs  server.rs
crates/cluster_api/tests/: integration.rs
crates/db/: Cargo.toml
crates/db/src/: config.rs  lib.rs  main.rs  metrics.rs  server.rs
crates/db/tests/: integration.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: aggregator.rs  lib.rs  provider.rs  system.rs
crates/metrics_api/: Cargo.toml
crates/metrics_api/src/: lib.rs
crates/metrics_api/src/rpc/: client.rs  mod.rs  server.rs
crates/migration/: Cargo.toml
crates/migration/src/manager/: mod.rs  test.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs  metrics.rs
crates/node/tests/: integration.rs
crates/operator_cli/: Cargo.toml  keypair
crates/operator_cli/src/: client.rs  key.rs  main.rs  maintenance.rs  node.rs  rename.rs  test_client.rs  test_server.rs  view.rs
crates/quinn_test_client/: Cargo.toml
crates/quinn_test_client/src/: main.rs
crates/quinn_test_server/: Cargo.toml
crates/quinn_test_server/src/: main.rs
crates/replication/: Cargo.toml
crates/replication/src/coordinator/: mod.rs  read_repair.rs  reconciliation.rs  test.rs
crates/replication/src/replica/: mod.rs  test.rs
crates/rocks/: Cargo.toml
crates/rocks/src/db/: migration.rs  reader.rs
crates/rocks/src/db/compaction/: filters.rs
crates/rpc/: Cargo.toml
crates/rpc/derive/src/: lib.rs
crates/rpc/src/: client.rs  lib.rs  quic.rs  server.rs  transport.rs
crates/rpc/src/transport/: sink.rs  stream.rs  write.rs
crates/storage_api/src/: lib.rs  testing.rs
crates/storage_api/src/rpc/: mod.rs
crates/storage_api/tests/: integration.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  load_simulator.rs
crates/testing/tests/: integration.rs
docs/: node-operator-onboarding.md  operator-cli-guide.md
infra/mainnet/: main.tf
infra/mainnet/secrets/: ap.wallet-connect-2.sops.json  ap.wallet-connect.sops.json  eu.wallet-connect-3.sops.json  eu.wallet-connect.sops.json  sa.wallet-connect.sops.json  us.wallet-connect.sops.json  wallet-connect-eu.sops.json  wallet-connect-us.sops.json
infra/mainnet/sops/: ap.admin.json  ap.wallet-connect-2.json  ap.wallet-connect.json  eu.admin.json  eu.wallet-connect-2.sops.json  eu.wallet-connect-3.json  eu.wallet-connect-4.sops.json  eu.wallet-connect-5.json  eu.wallet-connect-5.sops.json  eu.wallet-connect.json  eu.wallet-connect.sops.json  sa.admin.json  sa.wallet-connect-2.sops.json  sa.wallet-connect.json  sa.wallet-connect.sops.json  us.admin.json  us.wallet-connect-2.sops.json  us.wallet-connect.json
infra/modules/admin-key/: main.tf
infra/modules/db/: main.tf  userdata.sh
infra/modules/dns/: main.tf
infra/modules/ec2-ecs-iam-instance-profile/: main.tf
infra/modules/ecs-task-execution-role/: main.tf
infra/modules/https-gateway/: main.tf
infra/modules/monitoring/: main.tf  userdata.sh
infra/modules/node/: main.tf  userdata.sh
infra/modules/node-operator/: main.tf
infra/modules/secret/: main.tf
infra/modules/secret-template/: main.tf
infra/modules/service/: main.tf  userdata.sh
infra/modules/sops-encryption-key/: main.tf
infra/modules/ssl-certificate/: main.tf
infra/testnet/: main.tf  secrets.yaml  test.yaml
infra/testnet/secrets/: operator-a.sops.json  operator-a.sops.yaml  operator-b.sops.json  operator-b.sops.yaml  operator-c.sops.json  operator-c.sops.yaml  operator-d.sops.json  operator-d.sops.yaml  operator-e.sops.json  shared.sops.json  wallet-connect-1.sops.yaml  wallet-connect.sops.json  wallet-connect.sops.yaml
infra/testnet/sops/: admin.json  operator-a.json  operator-b.json  operator-c.json  operator-d.json  operator-e.json  wallet-connect.json
