[package]
name = "wcn_admin"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Local
wcn_cluster = { workspace = true, features = ["evm", "kms"] }

# Derives
derive_more = { workspace = true, features = ["as_ref"] }

# General purpose
anyhow = { workspace = true }

# Async
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
futures = { workspace = true }

# Other
clap = { workspace = true }
libp2p-identity = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-config = "1.8"

[lints]
workspace = true
