[package]
name = "wcn_cluster"
version = "0.1.0"
edition = "2021"
publish = false

[features]
cli = ["clap", "tokio/full", "serde_with"]
default = []
testing = []

[lints]
workspace = true

[dependencies]
# Local
sharding = { path = "../sharding" }

# Derives
derive_more = { workspace = true, features = ["as_ref", "display", "from", "into", "try_from"] }
derive-where = { workspace = true }
thiserror = { workspace = true }

# General purpose
arc-swap = { workspace = true }
const-hex = { workspace = true }
tap = { workspace = true }
time = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
tracing = { workspace = true }

# Collections
indexmap = { workspace = true }
smallvec = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

# Encryption
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
aes = { version = "0.8", default-features = false }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["time", "rt"] }
tokio-stream = { workspace = true }

# Domain specific
libp2p-identity = { workspace = true, features = ["serde", "rand"] }
xxhash-rust = { workspace = true }
multihash = { version = "0.19", default-features = false }
alloy = { workspace = true, features = [
    "contract",
    "signer-local",
    "reqwest",
    "provider-http",
    "provider-ws",
    "rpc-types",
] }
anyhow.workspace = true
clap = { version = "4.5.40", features = ["derive", "env"], optional = true }
base64.workspace = true
rand.workspace = true
serde_with = { version = "3.14.1", optional = true }

[dev-dependencies]
libp2p-identity = { workspace = true, features = ["rand"] }
proptest = "1"
wcn_cluster = { path = ".", features = ["testing"] }
alloy = { version = "1.0", default-features = false, features = [
    "provider-anvil-node",
    "node-bindings",
] }
tokio = { version = "1", features = ["full"] }
arc-swap = "1.7"
clap = { version = "4.5.40", features = ["derive", "env"] }
assert_cmd = "2.0.17"

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
hex = "0.4.3"
