[package]
name = "wcn_cluster"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["evm"]
testing = []
evm = ["dep:alloy"]

[lints]
workspace = true

[dependencies]
# Local
sharding = { path = "../sharding" }

# Org
wc = { workspace = true, features = ["metrics"] }

# Derives
derive_more = { workspace = true, features = ["as_ref", "display", "from", "into", "try_from"] }
derive-where = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true , features = ["derive"] }

# General purpose
base64.workspace = true
rand.workspace = true
anyhow.workspace = true
arc-swap = { workspace = true }
const-hex = { workspace = true }
tap = { workspace = true }
time = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
tracing = { workspace = true }

# Collections
indexmap = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

# Encryption
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
aes = { version = "0.8", default-features = false }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }

# Domain specific
libp2p-identity = { workspace = true, features = ["serde", "rand"] }
xxhash-rust = { workspace = true }
multihash = { version = "0.19", default-features = false }
alloy = { workspace = true, optional = true, features = [
    "contract",
    "signer-local",
    "reqwest",
    "provider-http",
    "provider-ws",
    "rpc-types",
] }

[dev-dependencies]
libp2p-identity = { workspace = true, features = ["rand"] }
proptest = "1"
