[package]
name = "wcn_operator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
quinn-proto = { version = "0.11", default-features = false }

# Local
wcn_cluster = { workspace = true, features = ["evm"] }
wcn_logging = { workspace = true }
wcn_rpc = { workspace = true, features = ["client", "server"] }
wcn_storage_api = { workspace = true, features = ["rpc_client", "rpc_server"] }

# Derives
derive_more = { workspace = true, features = ["as_ref"] }

# General purpose
anyhow = { workspace = true }

# Async
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

# Other
clap = { workspace = true }
libp2p-identity = { workspace = true }

tracing = { workspace = true }

[lints]
workspace = true