[package]
name = "quinn-test-client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { version = "0.3", default-features = false }
libp2p-identity = { version = "0.2", default-features = false, features = ["ed25519", "rand"] }
wcn_logging = { workspace = true }
wcn_rpc = { workspace = true, features = ["client"] }
wcn_storage_api = { workspace = true, features = ["rpc_client"] }
quinn-proto = { version = "0.11", default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false }

[lints]
workspace = true
