[package]
name = "quinn-test-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { version = "0.3", default-features = false }
libp2p-identity = { version = "0.2", default-features = false, features = ["ed25519", "rand"] }
wcn_logging = { workspace = true }
wcn_rpc = { workspace = true, features = ["server"] }
wcn_storage_api = { workspace = true, features = ["rpc_server"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false }

[lints]
workspace = true
